# WirtualnySwiatCpp

./: CMakeLists.txt  Organizm.cpp  Organizm.h  README.md  WirtualnySwiat.cpp  WirtualnySwiat.h  main.cpp
Roslina/: Ciern.cpp  Ciern.h  Guarana.cpp  Guarana.h  Roslina.cpp  Roslina.h  Trawa.cpp  Trawa.h
Zwierze/: Dzik.cpp  Dzik.h  Lew.cpp  Lew.h  Owca.cpp  Owca.h  Wilk.cpp  Wilk.h  Zmija.cpp  Zmija.h  Zwierze.cpp  Zwierze.h
