cmake_minimum_required(VERSION 3.15)
project(wirtualny_swiat)

set(CMAKE_CXX_STANDARD 14)

add_executable(wirtualny_swiat main.cpp cmake-build-debug/Organizm.cpp cmake-build-debug/Organizm.h WirtualnySwiat.cpp WirtualnySwiat.h Roslina/Roslina.cpp Roslina/Roslina.h Roslina/Ciern.cpp Roslina/Ciern.h Roslina/Guarana.cpp Roslina/Guarana.h Roslina/Trawa.cpp Roslina/Trawa.h Zwierze/Zwierze.cpp Zwierze/Zwierze.h Zwierze/Dzik.cpp Zwierze/Dzik.h Organizm.cpp Organizm.h Zwierze/Lew.cpp Zwierze/Lew.h Zwierze/Owca.cpp Zwierze/Owca.h Zwierze/Wilk.cpp Zwierze/Wilk.h Zwierze/Zmija.cpp Zwierze/Zmija.h)